--- a/tag_dasar.html
+++ b/tag_dasar.html
@@ -7,8 +7,12 @@
     <title>Lab1Web</title>
 </head>
 <body>
+    <!-- judul paragraf pertama -->
+    <h1>Belajar Dasar HTML</h1>
     <!--ini adalah paragraf pertama  -->
     <p align="center">saya reza tariki taser mahasiswa unversitas pelita bangsa jurusan teknik informatika saya sedang mempelajari matakuliah pemrograman web</p>
+    <!-- judul paragraf kedua -->
+    <h2>Paragraf pada HTML</h2>
     <!-- ini adalah paragraf kedua -->
     <p align="right">di matakuliah kali ini yang saya pelajari adalah tag dasar html </p>
 </body>
