--- a/tag_dasar.html
+++ b/tag_dasar.html
@@ -10,10 +10,10 @@
     <!-- judul paragraf pertama -->
     <h1>Belajar Dasar HTML</h1>
     <!--ini adalah paragraf pertama  -->
-    <p align="center">saya reza tariki taser mahasiswa unversitas pelita bangsa jurusan teknik informatika saya sedang mempelajari matakuliah pemrograman web</p>
+    <p align="center"> <span style="background-color: yellow;">saya reza tariki taser</span>  mahasiswa <b>UNIVERSITAS PELITA BANGSA</b>  jurusan teknik informatika saya sedang mempelajari matakuliah pemrograman web</p>
     <!-- judul paragraf kedua -->
     <h2>Paragraf pada HTML</h2>
     <!-- ini adalah paragraf kedua -->
-    <p align="right">di matakuliah kali ini yang saya pelajari adalah tag dasar html </p>
+    <p align="right">di <i>matakuliah</i>  kali ini yang saya pelajari adalah <u>tag dasar html</u>  </p>
 </body>
 </html>
