--- a/tag_dasar.html
+++ b/tag_dasar.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab1Web</title>
 </head>
+
 <body>
     <!-- judul paragraf pertama -->
     <h1>Belajar Dasar HTML</h1>
     <!--ini adalah paragraf pertama  -->
-    <p align="center"> <span style="background-color: yellow;">saya reza tariki taser</span>  mahasiswa <b>UNIVERSITAS PELITA BANGSA</b>  jurusan teknik informatika saya sedang mempelajari matakuliah pemrograman web</p>
+    <p align="center"> <span style="background-color: yellow;">saya reza tariki taser</span> mahasiswa <b>UNIVERSITAS
+            PELITA BANGSA</b> jurusan teknik informatika saya sedang mempelajari matakuliah pemrograman web</p>
     <!-- judul paragraf kedua -->
     <h2>Paragraf pada HTML</h2>
     <!-- ini adalah paragraf kedua -->
-    <p align="right">di <i>matakuliah</i>  kali ini yang saya pelajari adalah <u>tag dasar html</u>  </p>
+    <p align="right">di <i>matakuliah</i> kali ini yang saya pelajari adalah <u>tag dasar html</u> </p>
+     <!-- Sub judul Pragraf --> 
+     <h3>Menambahkan gambar</h3>
+     <!-- Menambahkan gambar pada dokumen -->
+    <img src="img/pelita_bangsa.png" alt="UPB" title="Logo Universitas Pelita Bangsa" width="200px
+    ">   
 </body>
+
 </html>
