--- a/tag_dasar.html
+++ b/tag_dasar.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <!-- menambahkan link navigasi -->
+    <nav>
+        <a href="tag_dasar.html">Dasar HTML</a>
+        <a href="halaman2.html">Halaman 2</a>
+        <a href="https://github.com/mohaamadreza13/Lab1Web">Halaman Web Eksternal Google</a>
+    </nav>
+    <hr>
     <!-- judul paragraf pertama -->
     <h1>Belajar Dasar HTML</h1>
     <!--ini adalah paragraf pertama  -->
@@ -18,11 +25,11 @@
     <h2>Paragraf pada HTML</h2>
     <!-- ini adalah paragraf kedua -->
     <p align="right">di <i>matakuliah</i> kali ini yang saya pelajari adalah <u>tag dasar html</u> </p>
-     <!-- Sub judul Pragraf --> 
-     <h3>Menambahkan gambar</h3>
-     <!-- Menambahkan gambar pada dokumen -->
+    <!-- Sub judul Pragraf -->
+    <h3>Menambahkan gambar</h3>
+    <!-- Menambahkan gambar pada dokumen -->
     <img src="img/pelita_bangsa.png" alt="UPB" title="Logo Universitas Pelita Bangsa" width="200px
-    ">   
+    ">
 </body>
 
 </html>
